in working on bakery website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="wrapp">
-            <img class="logo_white" src="img/header/logo_white.png" width="140px" height="44px">
+            <img class="logo_white" src="img/header/logo_white.png" width="140" height="44" alt="logotip of company">
             <nav class="nav-menu">
                 <ul class="nav-menu__list">
                     <li class="nav-menu__item">
@@ -48,12 +48,10 @@
                         <a href="#" class="ss-nav-menu__link"><img src="img/header/twitter.svg" alt="icon_twitter"></a>
                     </li>
                     <li class="ss-nav-menu__item">
-                        <a href="#" class="ss-nav-menu__link"><img src="img/header/facebook.svg"
-                                alt="icon_facebook"></a>
+                        <a href="#" class="ss-nav-menu__link"><img src="img/header/facebook.svg" alt="icon_facebook"></a>
                     </li>
                     <li class="ss-nav-menu__item">
-                        <a href="#" class="ss-nav-menu__link"><img src="img/header/instagram.svg"
-                                alt="icon_instagram"></a>
+                        <a href="#" class="ss-nav-menu__link"><img src="img/header/instagram.svg" alt="icon_instagram"></a>
                     </li>
                 </ul>
             </nav>
@@ -66,7 +64,7 @@
                     <p class="website-title__text">Pastry with love</p>
                 </div>
                 <div class="decore-line">
-                    <img src="img/section_1/dashed_line.svg" class="decore-line">
+                    <img src="img/section_1/dashed_line.svg" class="decore-line" alt="">
                 </div>
                 <div class="website-subtitle">
                     <p class="website-subtitle__text">
@@ -80,7 +78,7 @@
             </div>
             <div class="decor-circle">
                 <div class="decor-circle__circle"></div>
-                <img class="decor-circle__item" src="img/section_1/decor_circle_1.png">
+                <img class="decor-circle__item" src="img/section_1/decor_circle_1.png" alt="">
             </div>
         </section>
 
@@ -114,22 +112,22 @@
                                 <h5 class="normal">Gaspare</h5>
                             </div>
                         </div>
-                        <img class="block-chef__img" src="img/section_2/unique.png">
+                        <img class="block-chef__img" src="img/section_2/unique.png" alt="">
                     </div>
                 </div>
                 <div class="block-tastes">
                     <ul class="block-tastes__list">
                         <li class="block-tastes__item">
-                            <img class="block-tastes__img" src="img/section_2/img_1.jpg">
+                            <img class="block-tastes__img" src="img/section_2/img_1.jpg" alt="">
                         </li>
                         <li class="block-tastes__item">
-                            <img class="block-tastes__img" src="img/section_2/img_2.jpg">
+                            <img class="block-tastes__img" src="img/section_2/img_2.jpg" alt="">
                         </li>
                         <li class="block-tastes__item">
-                            <img class="block-tastes__img" src="img/section_2/img_3.jpg">
+                            <img class="block-tastes__img" src="img/section_2/img_3.jpg" alt="">
                         </li>
                         <li class="block-tastes__item">
-                            <img class="block-tastes__img" src="img/section_2/img_4.jpg">
+                            <img class="block-tastes__img" src="img/section_2/img_4.jpg" alt="">
                         </li>
                     </ul>
                     <div class="block-tastes-title"></div>
@@ -159,9 +157,9 @@
                         <div class="slider">
                             <button class="slider__button_left"></button>
                             <div class="slider__wrapp">
-                                <img src="img/section_3/ellipse_1.png">
-                                <img src="img/section_3/ellipse_2.png">
-                                <img src="img/section_3/ellipse_3.png">
+                                <img src="img/section_3/ellipse_1.png" alt="">
+                                <img src="img/section_3/ellipse_2.png" alt="">
+                                <img src="img/section_3/ellipse_3.png" alt="">
                             </div>
                             <button class="slider__button_right"></button>
                         </div>
@@ -252,7 +250,7 @@
                 <div class="block-food">
                     <ul class="block-food__list">
                         <li class="block-food__item">
-                            <img src="img/section_5/Class_aptent.png">
+                            <img src="img/section_5/Class_aptent.png" alt="">
                             <p class="block-food__item-header">Class aptent</p>
                             <pre class="block-food__item-description">
 Quot alienum percecuti ut eam, nam ad
@@ -260,7 +258,7 @@ atquil primis nusquam
                             </pre>
                         </li>
                         <li class="block-food__item">
-                            <img src="img/section_5/Nulla_eget.png">
+                            <img src="img/section_5/Nulla_eget.png" alt="">
                             <p class="block-food__item-header">Nulla eget</p>
                             <pre class="block-food__item-description">
 Nullam dictum fells eu pede mollis
@@ -268,7 +266,7 @@ pretium integer tincidunt.
                             </pre>
                         </li>
                         <li class="block-food__item">
-                            <img src="img/section_5/Sed_nubh_purus.png">
+                            <img src="img/section_5/Sed_nubh_purus.png" alt="">
                             <p class="block-food__item-header">Sed nibh purus</p>
                             <pre class="block-food__item-description">
 Aenean eleifend tellus leo ligula,
@@ -278,7 +276,7 @@ porttitor eu, consequat vitae
                     </ul>
                 </div>
                 <div class="block-sandwich">
-                    <img src="img/section_5/img_1.jpg">
+                    <img src="img/section_5/img_1.jpg" alt="">
                     <div class="block-sandwich__aside">
                         <ul class="block-sandwich__list">
                             <li class="block-sandwich__item">
